# mp3totxt

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  get_channel_mp3.sh  get_one_mp3.sh  pyproject.toml  speech_2_text.py
text/: Découverte de l'outil nslookup (et de Resolve-DnsName).txt
